Bug 64336 - [Patch] Fix coverity warnings
Summary: [Patch] Fix coverity warnings
Status: RESOLVED FIXED
Alias: None
Product: PolicyKit
Classification: Unclassified
Component: libpolkit (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: David Zeuthen (not reading bugmail)
QA Contact: David Zeuthen (not reading bugmail)
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-07 20:44 UTC by Miloslav Trmac
Modified: 2013-05-07 23:15 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
0001-Drop-unused-variable.patch (1.02 KB, patch)
2013-05-07 20:45 UTC, Miloslav Trmac
Details | Splinter Review
0002-Fix-a-memory-leak.patch (716 bytes, patch)
2013-05-07 20:45 UTC, Miloslav Trmac
Details | Splinter Review
0003-Remove-an-unused-va_start.patch (857 bytes, patch)
2013-05-07 20:45 UTC, Miloslav Trmac
Details | Splinter Review

Description Miloslav Trmac 2013-05-07 20:44:26 UTC
The good news is that coverity found nothing major.  The bad news is that I feel compelled to fix the minor issues so that I don't have to see them in the future :)
Comment 1 Miloslav Trmac 2013-05-07 20:45:17 UTC
Created attachment 79004 [details] [review]
0001-Drop-unused-variable.patch
Comment 2 Miloslav Trmac 2013-05-07 20:45:29 UTC
Created attachment 79005 [details] [review]
0002-Fix-a-memory-leak.patch
Comment 3 Miloslav Trmac 2013-05-07 20:45:44 UTC
Created attachment 79006 [details] [review]
0003-Remove-an-unused-va_start.patch
Comment 4 Colin Walters 2013-05-07 23:07:52 UTC
Comment on attachment 79004 [details] [review]
0001-Drop-unused-variable.patch

Review of attachment 79004 [details] [review]:
-----------------------------------------------------------------

Looks fine.
Comment 5 Colin Walters 2013-05-07 23:08:00 UTC
Comment on attachment 79005 [details] [review]
0002-Fix-a-memory-leak.patch

Review of attachment 79005 [details] [review]:
-----------------------------------------------------------------

Right.
Comment 6 Colin Walters 2013-05-07 23:09:02 UTC
Comment on attachment 79006 [details] [review]
0003-Remove-an-unused-va_start.patch

Review of attachment 79006 [details] [review]:
-----------------------------------------------------------------

Eeek, undefined behavior.   Patch looks good.
Comment 7 Miloslav Trmac 2013-05-07 23:15:37 UTC
Thanks for the review, committed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.