Drop unused variable

https://bugs.freedesktop.org/show_bug.cgi?id=64336